# Detector

./: CMakeLists.txt  README.md  main.cpp  monitor.cpp  monitor.h  scanner.cpp  scanner.h  sha256.c  sha256.h  signatures.db
